--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ Source = "https://github.com/bebound/pixiv"
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+pixivd = ['src/pixivd/local/*']
+
 [dependency-groups]
 dev = [
     "ruff>=0.11.8",
